# personal-ai-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/agents/: graph.py  nodes.py  state.py
app/routers/: memory.py  webhook.py
app/schemas/: agent.py
app/tools/: calendar.py  notion.py  telegram.py
